# third_party_protobuf

./: 65.diff  BUILD.gn  OAT.xml  README.OpenSource  README.en.md  README.md  bundle.json  libprotobuf.map  libprotobuf_lite.map  libprotoc.map
cmake/: abseil-cpp.cmake
java/core/src/main/java/com/google/protobuf/: FieldSet.java  GeneratedMessageLite.java  TextFormat.java
java/core/src/test/java/com/google/protobuf/: UnknownFieldSetTest.java
java/lite/: pom.xml
java/lite/src/test/java/com/google/protobuf/: LiteTest.java
python/google/protobuf/internal/: decoder.py  decoder_test.py  message_test.py  self_recursive.proto
src/: BUILD.gn  Makefile.am  file_lists.cmake
src/google/protobuf/: descriptor.cc  parse_context.h  port_def.inc  wire_format.cc  wire_format_lite.cc  wire_format_lite.h  wire_format_unittest.cc
src/google/protobuf/compiler/java/: java_enum_field.cc  java_field.h  java_message.cc  java_message_field.cc  java_primitive_field.cc  java_string_field.cc
src/google/protobuf/io/: coded_stream.h
src/google/protobuf/stubs/: port.h
